# ginger-ws

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile.build  README.md  build.sh  database.toml  docker-compose.yml  index.html  metadata.toml  releaser.toml  services.toml
.github/workflows/: CI.yml  ci.yml
src/: auth_helpers.rs  auth_schemas.rs  mailer.rs  main.rs  message_queue_helpers.rs  prom_helpers.rs  requests.rs  responses.rs  rest_bridge.rs  shared.rs
