[package]
description = "Notification service"
edition = "2021"
name = "NotificationService"
version = "0.1.0"

[dependencies]
IAMService = {path = "./IAMService_client"}
futures = "0.3"
jsonwebtoken = "9.3.0"
lapin = "2.5.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = {version = "1", features = ["full"]}
utoipa = {version = "2", features = ["json"]}
utoipa-swagger-ui = "2.0"
warp = "0.3"

[package.metadata]
organization = "ginger-society"
