[package]
description = "Notification service"
edition = "2021"
name = "NotificationService"
version = "0.1.0"

[dependencies]
IAMService = {path = "./IAMService_client"}
aws-config = "1.5.8"
aws-sdk-ses = "1.48.0"
futures = "0.3"
ginger-shared-rs = {version = "0.38.0-nightly.0", organization = "ginger-society"}
jsonwebtoken = "9.3.0"
lapin = "2.5.0"
lazy_static = "1.5.0"
prometheus = "0.13.4"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = {version = "1", features = ["full"]}
utoipa = {version = "2", features = ["json"]}
utoipa-swagger-ui = "2.0"
warp = "0.3"

[package.metadata]
organization = "ginger-society"
